2007-07-09  Ethan Glasser-Camp  <ethan.glasser.camp@gmail.com>

	* tutorial3.py: change glScale to glScalef to be compatible with
	  python-opengl version 3.0 and up. Thanks to Nathanial Troutman for
	  finding the bug and suggesting a fix.

2007-06-16  Ethan Glasser-Camp  <ethan.glasser.camp@gmail.com>

	* ode.pyx: reapplied weakref patch after finding the bug
	* tutorial3.py: fix bug where geoms were not stored, causing them
	  to be deleted as per the weakref patch :)

2007-06-14  Ethan Glasser-Camp  <ethan.glasser.camp@gmail.com>

	* heightfielddata.pyx: bug fix from Dan Miller
	* Reverted weakref patch -- it causes some kind of strange
	  bug. I'll look into it later.
	* heightfielddata.pyx: Save a reference to the data tuple, because
	  otherwise it gets garbage collected and causes problems. Thanks
	  to Dan Miller for finding the bug and figuring it out.
	
2007-06-05  Matthias Baas <mbaas@users.sourceforge.net>

	* Applied a couple of patches posted by Ethan Glasser-Camp to the 
	  mailing list (doc strings for GeomRay, __delattr__ on
	  GeomObject, UniversalJoint angle updates, storing
	  Geoms with weak references, triangle count)
	* Added the heightfield patch as well

2006-11-28  Matthias Baas <mbaas@users.sourceforge.net>

	* setup.py: Modified the setup script to upgrade to ODE 0.7.
	
2006-11-10  Matthias Baas <mbaas@users.sourceforge.net>

	* joints.pyx, geoms.pyx: Applied some more patches by 
	  Ethan Glasser-Camp (switched from the ccylinder functions to
	  the capsule functions and renamed the GeomCCylinder to GeomCapsule.
	  For backwards compatibility, the name GeomCCylinder is still
	  available and is an alias for GeomCapsule. Added support for
	  GeomCylinder (the uncapped one)).

2006-11-09  Matthias Baas <mbaas@users.sourceforge.net>

	* joints.pyx: Applied a patch from the mailing list that adds support
	  for the LMotor (thanks to Ethan Glasser-Camp).
	* joints.pyx: Applied a patch from the mailing list that adds support